syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.orderbook.proto";
package org.loopring.orderbook.proto;

message GasReq {
}

message GasRes {
    string value = 1;
}

message SetGas {
    string value = 1;
}
